# effectivem_test

./: README.md  main.py  pyproject.toml
src/: file_manager.py  financial_wallet.py  operation_validators.py  utils.py
tests/: conftest.py  test_financial_wallet.py  test_operation.py  test_operation_validator.py
